--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<ul id="nav">
 		<li class ="item1"><a href="">Item 1</a></li>
-		<li class ="item2"><a href="">Item 2</a></li>
+		<li class ="item2"><a href="test.php">on vas sur le php</a></li>
 		<li class ="item3"><a href="">Item 3</a></li>
 		<li class ="item4"><a href="">Item 4</a></li>
 	</ul>
