on fait un setup

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Je fait un test</title>
+	<title>Les fillaments</title>
 </head>
 <body>
-	<?php include("./page.php"); ?> 
+	<header>
+		<nav><div>Menu</div></nav>
+	</header>
 	<main>
-		<p> Bon voilà du text pour voir si ça marche</p>
-		<div> <?php echo "ulna"; ?> </div>
+		<p>Bon voilà du text pour voir si ça marche</p>
 		<p>un autre text</p>
 	</main>
 </body>
