--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 		<nav><div>Menu</div></nav>
 	</header>
 	<main>
-		<p>Bon voilà du text pour voir si ça marche</p>
-		<p>un autre text</p>
+
 	</main>
+	<footer>
+		<nav></nav>
+	</footer>
 </body>
 </html>
