add tailwind cdn

--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Les fillaments</title>
+	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+	<title>Les filaments</title>
 </head>
 <body>
 	<header>
-		<nav><div>Menu</div></nav>
+		<nav>
+			<div>Menu</div>
+			<ul>
+				<li>liste des filaments</li>
+				<li>caractéristique</li>
+				<li></li>
+			</ul>
+		</nav>
 	</header>
 	<main>
-
+		<a href="#" class="bg-blue-700 text-white px-5 py-3 font-bold rounded">
+  			Bouton
+		</a>
 	</main>
 	<footer>
 		<nav></nav>
