--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style/mainStyle.css">
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+	<script type="text/javascript" src="script/jquerry.js"></script>
+	<script type="text/javascript" src="script/script.js"></script>
 	<title>Les filaments</title>
 </head>
 <body>
@@ -32,84 +34,84 @@
 				</thead>
 				<tbody>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 					<tr>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
+						<th class="brand"></th>
+						<th class="price"></th>
+						<th class="price bobine"></th>
+						<th class="material"></th>
+						<th class="weight"></th>
+						<th class="quality"></th>
 					</tr>
 				</tbody>
 			</table>
