update json manager

--- a/index.html
+++ b/index.html
@@ -37,81 +37,81 @@
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 					<tr>
 						<th class="brand"></th>
 						<th class="price"></th>
-						<th class="price bobine"></th>
+						<th class="bobine_price"></th>
 						<th class="material"></th>
-						<th class="weight"></th>
+						<th class="bobine_weight"></th>
 						<th class="quality"></th>
 					</tr>
 				</tbody>
