add nav button and some tailwind element

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<script type="text/javascript" src="script/script.js"></script>
 	<header>
-		<nav>
+		<nav class="menu">
 			<div>Menu</div>
 			<ul>
 				<li>liste des filaments</li>
@@ -22,100 +22,106 @@
 	</header>
 	<main>
 		<section>
-			<table>
-				<thead>
+			<table class="table-auto shadow-md">
+				<thead class="divide-y divide-indigo-900 ">
 					<tr>
-						<th>Marque</th>
-						<th>Prix au kg</th>
-						<th>Prix bobine</th>
-						<th>Matériaux</th>
-						<th>Poid bobine</th>
-						<th>Qualité</th>
+						<th class="">Marque</th>
+						<th class=" ">Prix au kg</th>
+						<th class=" ">Prix bobine</th>
+						<th class=" ">Matériaux</th>
+						<th class=" ">Poid bobine</th>
+						<th class=" ">Qualité</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody class="divide-y divide-indigo-900 ">
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 					<tr>
-						<th class="brand"></th>
-						<th class="price"></th>
-						<th class="bobine_price"></th>
-						<th class="material"></th>
-						<th class="bobine_weight"></th>
-						<th class="quality"></th>
+						<td class="brand  hover:bg-blue-200"></td>
+						<td class="price  hover:bg-blue-200"></td>
+						<td class="bobine_price  hover:bg-blue-200"></td>
+						<td class="material  hover:bg-blue-200"></td>
+						<td class="bobine_weight  hover:bg-blue-200"></td>
+						<td class="quality  hover:bg-blue-200"></td>
 					</tr>
 				</tbody>
 			</table>
+			<nav>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-indigo-700" type="button" onclick="index=0;updateList(index)">first</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-indigo-700" type="button" onclick="updateList(index--)">prev</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-indigo-700" type="button" onclick="updateList(index++)">next</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-indigo-700" type="button" onclick="index=listF.length;updateList(index)">last</button></div>
+			</nav>
 		</section>
 	</main>
 	<footer>
@@ -126,6 +132,7 @@
 				<li></li>
 			</ul>
 		</nav>
+		<span>&copy Fowyscience</span>
 	</footer>
 </body>
 </html>
