--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<table class="table-auto shadow-md">
 				<thead class="divide-y divide-indigo-900 ">
 					<tr>
-						<th class="">Marque</th>
+						<th class=" ">Marque</th>
 						<th class=" ">Prix au kg</th>
 						<th class=" ">Prix bobine</th>
 						<th class=" ">Matériaux</th>
@@ -117,10 +117,10 @@
 				</tbody>
 			</table>
 			<nav>
-				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-indigo-700" type="button" onclick="index=0;updateList(index)">first</button></div>
-				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-indigo-700" type="button" onclick="updateList(index--)">prev</button></div>
-				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-indigo-700" type="button" onclick="updateList(index++)">next</button></div>
-				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-indigo-700" type="button" onclick="index=listF.length;updateList(index)">last</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-white" type="button" onclick="index=0;updateTable(index)">first</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-white" type="button" onclick="updateTable(index--)">prev</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-500 text-white" type="button" onclick="updateTable(index++)">next</button></div>
+				<div><button class="w-1/2 flex items-center justify-center rounded-full bg-indigo-700 text-white" type="button" onclick="index=listF.length;updateTable(index)">last</button></div>
 			</nav>
 		</section>
 	</main>
