--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style/mainStyle.css">
-	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+	<link href="style/Style.css" rel="stylesheet">
 	<script type="text/javascript" src="script/jquerry.js"></script>
 	
 	<title>Les filaments</title>
