--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="script/script.js"></script>
 	<header>
 		<nav class="flex bg-indigo-700 text-white font-sans font-semibold sm:justify-center justify-end items-baseline">
-			<div class="sm:hidden flex py-2 mx-10">
+			<div class="tbl:transition duration-200 sm:hidden flex py-2 tbl:mx-10">
 			<span class="self-center">Menu</span>
 			<img class="h-7 w-7" src="./img/burger.svg">
 			</div>
@@ -25,115 +25,115 @@
 	</header>
 	<main>
 		<section class="grid justify-items-stretch">
-			<table class="table-auto shadow-md justify-self-center px-5">
-				<thead class="divide-y align-middle divide-indigo-900">
+			<table class="tbl:transition duration-200 table-auto mt-10 shadow-md justify-self-center text-xs tbl:text-base ">
+				<thead class="lg:transition duration-200 divide-y align-middle divide-indigo-900 lg:text-2xl">
 					<tr>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Marque</th>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Prix au kg</th>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Prix bobine</th>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Matériaux</th>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Poid bobine</th>
-						<th scope="col" class="tracking-wider px-1 md:px-3">Qualité</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Marque</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Prix au kg</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Prix bobine</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Matériaux</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Poid bobine</th>
+						<th scope="col" class=" tracking-tighter ipho:tracking-normal tbl:tracking-wider px-1 md:px-3">Qualité</th>
 					</tr>
 				</thead>
-				<tbody class="divide-y divide-indigo-900 align-middle min-w-full">
+				<tbody class="lg:transition duration-200 divide-y divide-indigo-900 align-middle min-w-full lg:text-2xl">
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 					<tr>
-						<td class="brand px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_price px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="material px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="bobine_weight px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
-						<td class="quality px-1 sm:px-3 hover:bg-blue-200 text-center">Valeur test</td>
+						<td class="brand tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_price tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="material tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="bobine_weight tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">Valeur test</td>
+						<td class="quality diagonal-fractions tracking-tighter ipho:tracking-normal px-0 tbl:px-1 sm:px-3 hover:bg-blue-200 text-center ">2.2/5</td>
 					</tr>
 				</tbody>
 			</table>
-			<nav class="grid my-5 justify-items-center sm:ml-40 ml-80 pl-20" aria-label="Pagination">
+			<nav class="grid my-5 justify-items-center" aria-label="Pagination">
 				<div>
-				<button class="px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-700" type="button" onclick="choice('first');updateTable(index)">
+				<button class="sm:transform duration-200 px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-700" type="button" onclick="choice('first');updateTable(index)">
 					<img class="h-4 w-4 mr-1 sm:mr-2" src="./img/larrow-8.png">
 					<span class="hidden self-center sm:inline-flex text-white">first</span>
 				</button>
-				<button class="px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-500" type="button" onclick="choice('prev');updateTable(index)">
+				<button class="sm:transform duration-200 px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-500" type="button" onclick="choice('prev');updateTable(index)">
 					<img class="h-4 w-4 mr-1 sm:mr-2" src="./img/larrow-7.png">
 					<span class="hidden self-center sm:inline-flex text-white">prev</span>
 				</button>
-				<button class="px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-500" type="button" onclick="choice('next');updateTable(index)">
+				<button class="sm:transform duration-200 px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-500" type="button" onclick="choice('next');updateTable(index)">
 					<span class="hidden self-center sm:inline-flex text-white">next</span>
 					<img class="h-4 w-4 ml-1 sm:ml-2" src="./img/rarrow-7.png">
 				</button>
-				<button class="px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-700" type="button" onclick="choice('last');updateTable(index)">
+				<button class="sm:transform duration-200 px-1 sm:px-5 py-1 items-center inline-flex justify-center rounded-full bg-indigo-700" type="button" onclick="choice('last');updateTable(index)">
 					<span class="hidden self-center sm:inline-flex text-white">last</span>
 					<img class="h-4 w-4 ml-1 sm:ml-2" src="./img/rarrow-8.png">
 				</button>	
