add meta viewport

--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link rel="stylesheet" type="text/css" href="style/mainStyle.css">
 	<link href="style/Style.css" rel="stylesheet">
+
 	<script type="text/javascript" src="script/jquerry.js"></script>
 	
 	<title>Les filaments</title>
 </head>
 <body>
 	<script type="text/javascript" src="script/script.js"></script>
-	<header>
+	<header class="sticky w-full">
 		<nav class="flex bg-indigo-700 text-white font-sans font-semibold sm:justify-center justify-end items-baseline">
-			<div class="tbl:transition duration-200 sm:hidden flex py-2 tbl:mx-10">
-			<span class="self-center">Menu</span>
+			<div class="sm:hidden flex py-2 mr-3">
+			<span class="self-center mr-1">Menu</span>
 			<img class="h-7 w-7" src="./img/burger.svg">
 			</div>
 			<ul class="hidden sm:flex py-2">
@@ -141,7 +144,7 @@
 			</nav>
 		</section>
 	</main>
-	<footer>
+	<footer class="text-white bg-indigo-700 fixed inset-x-0 bottom-0">
 		<nav>
 			<ul>
 				<li></li>
